objects/vlocity_ins__VlocityUILayout__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set the layout as active and ready to be used</description>
        <inlineHelpText>Set the layout as active and ready to be used</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Author__c</fullName>
        <description>The author of the Vlocity Layout.</description>
        <inlineHelpText>The author of the Vlocity Layout.</inlineHelpText>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Datasource__c</fullName>
        <label>Datasource</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Definition__c</fullName>
        <label>Definition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <description>Describe the current layout.</description>
        <inlineHelpText>Describe the current layout.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentID__c</fullName>
        <externalId>true</externalId>
        <label>Parent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RequiredPermission__c</fullName>
        <label>Required Permission Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Layout</fullName>
                    <default>true</default>
                    <label>Layout</label>
                </value>
                <value>
                    <fullName>Flyout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Version number of the Layout.</description>
        <inlineHelpText>Version number of the Layout.</inlineHelpText>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity UI Layout</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity UI Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>